@@ -1,3 +1,7 @@
+2006-12-10  Juanma Barranquero  <lekktu@gmail.com>
+
+	* erc-ezbounce.el (erc-ezb-init-session-list): Doc fix.
+
 2006-12-08  Michael Olson  <mwolson@gnu.org>
 
 	* erc.el: Re-evaluate contributions from a contributor, and found
